--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "firebase": "^9.20.0",
     "framer-motion": "^6.2.8",
     "mdb-react-ui-kit": "^6.0.0",
     "react": "^17.0.2",
