--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@emailjs/browser": "^3.4.0",
+    "@fortawesome/fontawesome-free": "^6.4.0",
     "@iconscout/react-unicons": "^1.1.6",
     "@mobiscroll/react": "https://npm.mobiscroll.com/@mobiscroll/react-trial/-/react-trial-5.23.2.tgz",
     "@testing-library/jest-dom": "^5.14.1",
